<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">Expense Manager</string>
    <string name="title">EXPENSE MANAGER</string>
    <string name="btnSalary">Salary</string>
    <string name="btnAddIncome">Additional Income</string>
    <string name="btnExpenses">Expenses</string>
    <string name="btnDebt">Debt</string>
    <string name="btnSavings">Savings</string>
    <string name="title_activity_salary">Salary</string>
    <string name="title_activity_add_income">Additional Income</string>
    <string name="title_activity_expenses">Expenses</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_debt">Debt</string>
    <string name="title_activity_savings">Savings</string>
    <string name="SalaryTitle">Salary Accounts</string>
    <string name="Salarydet1">The Salary for the Current Month of</string>
    <string name="btnAddComp">Add Component</string>
    <string name="btnReviseSalary">Revise Current Salary</string>
    <string name="addIncTitle">Addtional Income Accounts</string>
    <string name="addIncdet1">The Income for the Current Month is</string>
    <string name="addIncRevise">Revise Income</string>
    <string name="expTitle">Expenses Accounts</string>
    <string name="expdet1">The Expenses for the Current Month are</string>
    <string name="addIncAddExpenseText">Add Expenses</string>

</resources>