<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/expTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="5dp"
        android:text="@string/expdet1"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/expMonthYear"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="0dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/expTextDisplay"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/expMonthYear"
        android:layout_marginTop="5dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnAddExpense"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/expTextDisplay"
        android:text="@string/btnAddComp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/addIncRevise"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_below="@+id/addIncTextDisplay"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/addIncAddComponent"
        android:layout_alignParentRight="true"
        android:text="@string/addIncRevise"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/addIncList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addIncAddComponent" >
    </ListView>

</RelativeLayout>